fixed html to prevent overlapping

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+  }
+#search-history {
+    
+}
+
+ 
 .card {
     padding: 10px;
 }
